swagger for activity log
